--- a/pages/Fancy Cursed.html
+++ b/pages/Fancy Cursed.html
@@ -28,7 +28,7 @@ body {
 </style>
 </head>
 <body>
-    <p style="font-weight:bolder; font-size:50px;"> Test</p>
+    <p style="font-weight:bolder; font-size:50px;"> FUCK OFF ALREADY</p>
     
 </body>
 </html>
