--- a/index.html
+++ b/index.html
@@ -1,118 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-<!--Background-color changes the background of the entire site-->
-<!--The Padding is used to create space around an element's content, inside of any defined border-->
-<!--The Flex property sets the flexible length of flexible items-->
-<!--The Justify-content property aligns the flexible container's items when the items do not use all the available space on the main-axis (horizontally)-->
-<!--The Gap property defines the size of the gap between the rows and between the columns in flexbox, grid or multi-column layout-->
-<!--The flex-wrap property specifies whether the flexible items should wrap or not-->
-<!--The border property is shoprthand for (border-width, border-style and border color)-->
-<!--The height property sets the height of an element (The min-height and max-height override the height property)-->
-<!--The width property sets the width of an element (The min-width and max-width properties override the width property)-->
-<!--The color property specifies the color of text-->
-<!--The font-weight property set hows thick or thin characters in text should be displayed-->
-<!--The cursor property specifies the mouse cursor to be displayed when pointing over an element-->
-<!--The transisition property is a shorthand property for (transition-property, transisition-duration, transition-timing-function and transition-delay)-->
-<!--The font-family property specifies the font for an element-->
-<!--The align-items property specifies the default alignment for items inside a flexbox or grid container-->
-<!--The margin property sets the margins for an element, and is a shorthand property for the following properties (margin-top, margin-right, margin-bottom and margin-left)-->
     <style>
-        nav {
-            background-color: #a39f9f;
-            padding: 30px;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
-    }
-        .menu {
-            background-color: rgb(34, 190, 13);
-            border: 2px solid #000000;
-            border-radius: 20px;
-            height: 40px;
-            width: 120px;
-            color: #8d2ecc;
-            font-weight: bold;
-            cursor: pointer;
-            transition: 0.2s;
+      nav {
+        background-color: #a39f9f;
+        padding: 15px;
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        flex-wrap: wrap;
       }
+      .menu {
+        background-color: rgb(34, 190, 13);
+        border: 2px solid #000000;
+        border-radius: 20px;
+        height: 40px;
+        width: 120px;
+        color: #8d2ecc;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 0.2s;
+      }
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100vh;
+        margin: 0;
+        background-image: url(/images/background.png);
+        background-color: #a39f9f;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        padding: 1px;
+      }
+      .centered-text {
+        max-width: 600px;
+        word-wrap: break-word;
+        width: 90%;
+        text-align: center;
+        padding: 10px;
+        font-size: 1.2rem; /* Increase the text size for better readability on mobile */
+      }
+
+      /* Media Query for smaller screens (mobile devices) */
+      @media (max-width: 768px) {
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            margin: 0;
-            background-image: url(/images/bakcground.png);
-            background-color: #a39f9f;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            padding: 1px;
+          padding: 10px; /* Add some padding for mobile */
         }
-
+        .menu {
+          width: 100%; /* Make the buttons take up full width on small screens */
+          margin: 10px 0;
+        }
         .centered-text {
-            max-width: 600px;
-            word-wrap: break-word;
-            width: 49Sch;
-            text-align: center;
-            padding: 0.01;
+          font-size: 1rem; /* Adjust font size for smaller screens */
+          padding: 5px;
         }
+      }
+
+      @media (max-width: 480px) {
+        .menu {
+          font-size: 0.9rem; /* Smaller font for buttons on very small screens */
+        }
+      }
     </style>
-</head>
-<body>
-<head>
-    <p style="font-weight: bold; font-size: larger;"> Why am I so <a href="/pages/Fancy Cursed.html"> quiet?</a> </p>
-</head>
-<!--Paragraph #1-->
-<p class="centered-text">
-Why are you so loud? <br>
-Real G's move in silence, like lasagna <br>
-I'm introverted, how much more do you need?</p>
+  </head>
+  <body>
+    <p style="font-weight: bold; font-size: larger">
+      Why am I so <a href="/pages/Fancy Cursed.html">quiet?</a>
+    </p>
 
-<!--Paragraph #2-->
-<p class="centered-text">Needy I see...</p>
+    <!-- Paragraphs -->
+    <p class="centered-text">
+      Why are you so loud? <br />
+      Real G's move in silence, like lasagna <br />
+      I'm introverted, how much more do you need?
+    </p>
 
-<!--Paragraph #3-->
-<p class="centered-text">I don't have enough of an opinion formed about you, <br>
-to even spark a desire to talk with you. <br>
-What's your humor level? What kind of hobbies do you have? <br>
-Will you get offended easily?  <br>
-If the answer is "yes" to being offended easily, <br>
-that's the reason I don't talk with you <br>
-These are all things to consider before even wanting to talk with you, <br>
-otherwise it's just small talk which I hate. <br>
-"What's up?" The fucking ceiling <br>
-"How are you?" I'm fine like every other time aynone asks <br>
-Political? I love guns. <br>
-Religious? No thanks <br>
-Sports? No thanks <br>
-Movies? No thanks <br>
-Music? Loud and darker than you think <br>
-Video Games? On PC, and no you probably don't know the games I play<br>
-Red Dead Redemption? no, League of Legends? no, Competitive shooters? no, MMO's? no, <br>
-</p>
+    <p class="centered-text">Needy I see...</p>
 
-<!--Paragraph #4-->
-<p class="centered-text">Are we working together? I'm professional enough to work with you, <br>
-    but that's it. If you have a work question, ask. Otherwise I probably don't care <br>
-    I don't want to learn your life story and hear how hard you have it. <br>
-    I don't care how "badass" you are. 
- </p>
+    <p class="centered-text">
+      I don't have enough of an opinion formed about you, <br />
+      to even spark a desire to talk with you. <br />
+      What's your humor level? What kind of hobbies do you have? <br />
+      Will you get offended easily? <br />
+      If the answer is "yes" to being offended easily, <br />
+      that's the reason I don't talk with you <br />
+      These are all things to consider before even wanting to talk with you,
+      <br />
+      otherwise it's just small talk which I hate. <br />
+      "What's up?" The fucking ceiling <br />
+      "How are you?" I'm fine like every other time anyone asks <br />
+      Political? I love guns. <br />
+      Religious? No thanks <br />
+      Sports? No thanks <br />
+      Movies? No thanks <br />
+      Music? Loud and darker than you think <br />
+      Video Games? On PC, and no you probably don't know the games I play<br />
+      Red Dead Redemption? no, League of Legends? no, Competitive shooters? no,
+      MMO's? no,
+    </p>
 
-<!--Paragraph #5-->
-<p class="centered-text">
-Test
-</p>
+    <p class="centered-text">
+      Are we working together? I'm professional enough to work with you, <br />
+      but that's it. If you have a work question, ask. Otherwise I probably
+      don't care <br />
+      I don't want to learn your life story and hear how hard you have it.
+      <br />
+      I don't care how "badass" you are.
+    </p>
 
-<nav>
-    <button 
-    class="menu" onclick="location.href='/pages/Cursed.html'">Cursed Button</button>
-</nav>
+    <p class="centered-text">Test</p>
 
-</body>
+    <nav>
+      <button class="menu" onclick="location.href='/pages/Cursed.html'">
+        Cursed Button
+      </button>
+    </nav>
+  </body>
 </html>
