--- a/pages/Fancy Cursed.html
+++ b/pages/Fancy Cursed.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-<style>
-body {
-            font-family: 'Courier New', Courier, monospace;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-            margin: 0;
-            background-color: #a19e9e;
+    <style>
+      body {
+        font-family: "Courier New", Courier, monospace;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        min-height: 100%; 
+        margin: 0;
+        background-color: #a19e9e;
+        text-align: center;
+        flex-direction: column;
+      }
+
+      p {
+        font-weight: bolder;
+        font-size: 50px;
+        margin: 0;
+        color: black; 
+      }
+
+      
+      @media (max-width: 768px) {
+        p {
+          font-size: 30px; 
         }
-</style>
-</head>
-<body>
-    <p style="font-weight:bolder; font-size:50px;"> FUCK OFF ALREADY</p>
-    
-</body>
+      }
+
+      @media (max-width: 480px) {
+        p {
+          font-size: 20px; 
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <p>FUCK OFF ALREADY</p>
+  </body>
 </html>
+
