--- a/pages/Fancy Cursed.html
+++ b/pages/Fancy Cursed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HyperCursed</title>
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/images/17109-200.png" />
     <style>
       body {
         font-family: "Courier New", Courier, monospace;
