--- a/pages/Fancy Cursed.html
+++ b/pages/Fancy Cursed.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HyperCursed</title>
+    <title>CIQ</title>
     <link rel="icon" type="image/png" href="/images/17109-200.png" />
     <style>
       body {
