--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
       Religious? No thanks <br />
       Sports? No thanks <br />
       Movies? No thanks <br />
-      Music? Loud and darker than you think <br />
+      Music? Louder and darker than you'd think <br />
       Video Games? On PC, and no you probably don't know the games I play<br />
       Red Dead Redemption? no, League of Legends? no, Competitive shooters? no,
-      MMO's? no,
+      MMO's? no, and RPG's? no.
     </p>
 
     <p class="centered-text">
@@ -112,7 +112,7 @@
       don't care <br />
       I don't want to learn your life story and hear how hard you have it.
       <br />
-      I don't care how "badass" you are.
+      I just don't care anymore.
     </p>
 
     <nav>
