--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
       don't care <br />
       I don't want to learn your life story and hear how hard you have it.
       <br />
-      I just don't care anymore.
+      I don't want to compete, I don't have anything to prove to you <br>
+      I don't even care about your opinion. I just don't care anymore.
     </p>
 
     <nav>
