--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 
     <p class="centered-text">
       Are we working together? I'm professional enough to work with you, <br />
-      but that's it. If you have a work question, ask. Otherwise I probably
-      don't care <br />
+      but that's it. If you have a work question, ask. <br/>
       I don't want to learn your life story and hear how hard you have it.
       <br />
       I don't want to compete, I don't have anything to prove to you <br>
