--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
       I don't want to learn your life story and hear how hard you have it.
       <br />
       I don't want to compete, I don't have anything to prove to you <br>
-      I don't even care about your opinion. I just don't care anymore.
+      I don't even care about your opinion.<br/>
+      Are we working together? I'm professional enough to work with you, <br />
+      but that's it. If you have a work question, ask.
     </p>
 
     <nav>
