--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       What's your humor level? What kind of hobbies do you have? <br />
       Will you get offended easily? <br />
       If the answer is "yes" to being offended easily, <br />
-      that's the reason I don't talk with you <br />
+      that's the reason I don't talk with you. <br />
       These are all things to consider before even wanting to talk with you,
       <br />
       otherwise it's just small talk which I hate. <br />
@@ -107,10 +107,9 @@
     </p>
 
     <p class="centered-text">
-      I don't want to learn your life story and hear how hard you have it.
-      <br />
-      I don't want to compete, I don't have anything to prove to you <br>
-      I don't even care about your opinion.<br/>
+      I don't want to learn your life story and hear how hard you have it. <br />
+      I don't want to compete, I don't have anything to prove to you <br />
+      I don't even care about your opinion.<br />
       Are we working together? I'm professional enough to work with you, <br />
       but that's it. If you have a work question, ask.
     </p>
