--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <nav>
       <button class="menu" onclick="location.href='/pages/Cursed.html'">
-        Cursed Button
+        Still don't get it?
       </button>
     </nav>
   </body>
