--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </head>
   <body>
     <p style="font-weight: bold; font-size: larger">
-      Why am I so <a href="/pages/Fancy Cursed.html">quiet?</a>
+      Why am I so <a href="/pages/Cursed.html">quiet?</a>
     </p>
 
     <!-- Paragraphs -->
@@ -115,7 +115,7 @@
     </p>
 
     <nav>
-      <button class="menu" onclick="location.href='/pages/Cursed.html'">
+      <button class="menu" onclick="location.href='/pages/FancyCursed.html'">
         Still don't get it?
       </button>
     </nav>
