--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         align-items: center;
         margin: 0;
         height: 100vh;
-        background-color: #f2f2f2;
-        color: #222;
+        background-color: #1e1e1e;
+        color: #e0e0e0;
         padding: 20px;
         text-align: center;
       }
@@ -81,7 +81,7 @@
         It doesn’t need more.
       </p>
 
-      <button onclick="location.href='/'">Understood</button>
+      <button onclick="this.innerText = 'Great';">Understood</button>
     </div>
   </body>
 </html>
