--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
         It doesn’t need more.
       </p>
 
-      <button onclick="this.innerText = 'Great';">Understood</button>
+      <button onclick="
+  this.innerText = 'Great';
+  setTimeout(() => this.style.transition = 'opacity 1s ease', 50);
+  setTimeout(() => this.style.opacity = '0', 1000);
+  setTimeout(() => this.style.display = 'none', 2100);
+">Understood</button>
+
     </div>
   </body>
 </html>
