--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
   this.innerText = 'Great';
   setTimeout(() => this.style.transition = 'opacity 1s ease', 50);
   setTimeout(() => this.style.opacity = '0', 1000);
-  setTimeout(() => this.style.display = 'none', 2100);
+  setTimeout(() => this.style.visibility = 'hidden', 2100);
 ">Understood</button>
-
+      
     </div>
   </body>
 </html>
