--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asked and Answered</title>
-    <link rel="icon" type="image/png" href="/images/17109-200.png" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     <style>
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
