--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
       </p>
 
       <p>
-        You asked. This is the answer. <br />
-        It doesn’t need more.
-      </p>
+  You asked<span 
+    onclick="location.href='/friends.html'" 
+    style="cursor: pointer; display: inline-block; width: 14px; text-align: center; color: inherit;"
+  >.</span> This is the answer.<br />
+  It doesn’t need more.
+</p>
+
 
       <button onclick="
   this.innerText = 'Great';
