--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
 
       <p>
   You asked<span 
-    onclick="location.href='/friends.html'" 
+    onclick="location.href='/friends/'" 
     style="cursor: pointer; display: inline-block; width: 14px; text-align: center; color: inherit;"
   >.</span> This is the answer.<br />
   It doesn’t need more.
 </p>
-
 
       <button onclick="
   this.innerText = 'Great';
