--- a/friends/friends.html
+++ b/friends/friends.html
@@ -51,6 +51,15 @@
     img.style.zIndex = "9999";
     img.style.pointerEvents = "none";
     img.style.opacity = "0.85";
+    img.addEventListener("mouseenter", () => {
+  const randomShift = (Math.random() > 0.5 ? 1 : -1) * (Math.random() * 100 + 50); // 50–150px left/right
+  const currentLeft = parseFloat(img.style.left);
+  let newLeft = currentLeft + randomShift;
+
+  // Keep it inside the screen
+  newLeft = Math.max(0, Math.min(window.innerWidth - 32, newLeft));
+  img.style.left = newLeft + "px";
+});
     document.body.appendChild(img);
 
     let y = -20;
