--- a/friends/friends.html
+++ b/friends/friends.html
@@ -49,7 +49,8 @@
     img.style.left = Math.random() * window.innerWidth + "px";
     img.style.top = "-20px";
     img.style.zIndex = "9999";
-    img.style.pointerEvents = "none";
+    img.style.pointerEvents = "auto";
+    img.style.transition = "left 0.2s ease";
     img.style.opacity = "0.85";
     img.addEventListener("mouseenter", () => {
   const randomShift = (Math.random() > 0.5 ? 1 : -1) * (Math.random() * 100 + 50); // 50–150px left/right
