--- a/friends/friends.html
+++ b/friends/friends.html
@@ -38,7 +38,8 @@
     <div class="content">
     </div>
     <script>
-  const imgSrc = "/images/middle-finger-hollow.png";
+  const imgSrc = "/images/middle-finger-matrix.png";
+  const activeImages = [];
 
   function createDrop() {
     const img = document.createElement("img");
@@ -47,34 +48,60 @@
     img.style.width = "32px";
     img.style.height = "32px";
     img.style.left = Math.random() * window.innerWidth + "px";
-    img.style.top = "-20px";
+    img.style.top = "-40px";
     img.style.zIndex = "9999";
-    img.style.pointerEvents = "auto";
-    img.style.transition = "left 0.2s ease";
+    img.style.pointerEvents = "none";
     img.style.opacity = "0.85";
-    img.addEventListener("mouseenter", () => {
-  const randomShift = (Math.random() > 0.5 ? 1 : -1) * (Math.random() * 100 + 50); // 50–150px left/right
-  const currentLeft = parseFloat(img.style.left);
-  let newLeft = currentLeft + randomShift;
-
-  // Keep it inside the screen
-  newLeft = Math.max(0, Math.min(window.innerWidth - 32, newLeft));
-  img.style.left = newLeft + "px";
-});
+    img.style.transition = "left 0.2s ease";
     document.body.appendChild(img);
 
-    let y = -20;
-    const fall = setInterval(() => {
+    // Initial position and velocity
+    let x = parseFloat(img.style.left);
+    let y = -40;
+    let vx = (Math.random() - 0.5) * 2; // Small horizontal drift
+
+    const update = () => {
       y += 2;
+      x += vx;
+
+      // Bounce off screen edges
+      if (x <= 0 || x >= window.innerWidth - 32) {
+        vx *= -1;
+        x = Math.max(0, Math.min(window.innerWidth - 32, x));
+      }
+
+      img.style.left = x + "px";
       img.style.top = y + "px";
+
       if (y > window.innerHeight) {
         clearInterval(fall);
         img.remove();
+        const i = activeImages.indexOf(img);
+        if (i > -1) activeImages.splice(i, 1);
       }
-    }, 16);
+    };
+
+    const fall = setInterval(update, 16);
+    activeImages.push(img);
   }
 
-  setInterval(createDrop, 150); // Lower for more chaos, raise for less
+  // Cursor dodge logic (runs on mouse move)
+  document.addEventListener("mousemove", (e) => {
+    activeImages.forEach(img => {
+      const rect = img.getBoundingClientRect();
+      const dx = e.clientX - (rect.left + rect.width / 2);
+      const dy = e.clientY - (rect.top + rect.height / 2);
+      const distance = Math.sqrt(dx * dx + dy * dy);
+
+      if (distance < 60) { // Distance threshold to dodge
+        let newX = parseFloat(img.style.left) + (dx > 0 ? -60 : 60);
+        newX = Math.max(0, Math.min(window.innerWidth - 32, newX));
+        img.style.left = newX + "px";
+      }
+    });
+  });
+
+  setInterval(createDrop, 150);
 </script>
   </body>
 </html>
