--- a/friends/friends.html
+++ b/friends/friends.html
@@ -52,7 +52,7 @@
     img.style.zIndex = "9999";
     img.style.pointerEvents = "none";
     img.style.opacity = "0.85";
-    img.style.transition = "transform 0.3s ease";
+    img.style.transition = "left 0.2s ease, top 0.2s ease"; // Smooth dodge
     document.body.appendChild(img);
 
     // Track state
@@ -60,8 +60,8 @@
       el: img,
       x: parseFloat(img.style.left),
       y: -40,
-      vx: (Math.random() - 0.5) * 1.2, // Horizontal drift
-      vy: 0.6, // Slower fall
+      vx: (Math.random() - 0.5) * 1.2, // horizontal drift
+      vy: 0.6, // fall speed
       arcingOut: false
     };
 
@@ -70,14 +70,20 @@
 
   function animateFingers() {
     activeFingers.forEach((finger, index) => {
-      // If arcing, make it fly upward and out
       if (finger.arcingOut) {
+        // Arc movement
         finger.x += finger.vx;
-        finger.y -= 3; // Upward motion
+        finger.vy += 0.2; // Gravity increase
+        finger.y += finger.vy;
+
         finger.el.style.left = finger.x + "px";
         finger.el.style.top = finger.y + "px";
 
-        if (finger.y < -50 || finger.x < -50 || finger.x > window.innerWidth + 50) {
+        if (
+          finger.y > window.innerHeight + 50 ||
+          finger.x < -50 ||
+          finger.x > window.innerWidth + 50
+        ) {
           finger.el.remove();
           activeFingers.splice(index, 1);
         }
@@ -88,10 +94,12 @@
       finger.y += finger.vy;
       finger.x += finger.vx;
 
-      // Hit edge? Trigger arc out
       if (finger.x <= 0 || finger.x >= window.innerWidth - 32) {
+        // Trigger arcing out
         finger.arcingOut = true;
-        finger.vx = (finger.x <= 0 ? 1 : -1) * (Math.random() * 2 + 1); // Fling opposite
+        finger.vx = (finger.x <= 0 ? -1 : 1) * (Math.random() * 2 + 1); // fling outward
+        finger.vy = 1 + Math.random(); // initial arc velocity
+        finger.el.style.transition = "left 0.1s linear, top 0.1s linear"; // Remove glide
         finger.el.style.transform = "rotate(45deg)";
         return;
       }
@@ -110,10 +118,10 @@
     requestAnimationFrame(animateFingers);
   }
 
-  // Mouse dodge
+  // Smooth dodge away from cursor
   document.addEventListener("mousemove", (e) => {
     activeFingers.forEach(finger => {
-      if (finger.arcingOut) return; // Don't dodge if escaping
+      if (finger.arcingOut) return;
 
       const rect = finger.el.getBoundingClientRect();
       const dx = e.clientX - (rect.left + rect.width / 2);
@@ -121,8 +129,9 @@
       const distance = Math.sqrt(dx * dx + dy * dy);
 
       if (distance < 60) {
-        const dodge = (dx > 0 ? -80 : 80);
-        finger.x = Math.max(0, Math.min(window.innerWidth - 32, finger.x + dodge));
+        const dodgeDistance = (dx > 0 ? -80 : 80);
+        finger.x = Math.max(0, Math.min(window.innerWidth - 32, finger.x + dodgeDistance));
+        finger.el.style.left = finger.x + "px"; // transition smooths it out
       }
     });
   });
